# Grebball-Discord

./: .env.example  .gitignore  Cargo.toml  README.md
dates/: Cargo.toml
dates/src/: main.rs
db/: mongo_2022_picks.csv  seed-2025-w1.sql  struct-features-capsules.sql  struct.sql
src/: database.rs  football.rs  lib.rs  main.rs
src/commands/: blame.rs  capsule.rs  eliminatoires.rs  features.rs  matches.rs  mod.rs  picks.rs  ping.rs  results.rs  season.rs  stats.rs  submit.rs  team.rs  week.rs
web/: app.js  database.js  package-lock.json  package.json  plan.txt  simple.js
web/public/playoff-repicks/: script.js  style.css
web/public/playoffs/: script.js  style.css
web/views/: error.html  picks.ejs  picks.html  playoff-repicks.html  playoffs.html  success.html
