[package]
name = "grebball-discord"
version = "0.1.0"
authors = ["Alex B. <alexbrochu1@gmail.com>"]
edition = "2021"

[lib]
name = "library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.5.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.162"
serde_json = "1.0.96"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
